transaction performance get all Logistics
